--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,102 @@
-/* You can add global styles to this file, and also import other style files */
+@charset "utf-8";
+
+nav h1 { cursor: pointer; }
+
+/*
+***************** image section
+*/
+
+main { margin-top: 70px; }
+
+.main-overlay {
+	background-image: url(./assets/main-img.jpg);
+	background-size: cover;
+	max-height: 650px;
+	padding-bottom: 50px;
+}
+
+.overlay-wrap { padding: 5% 0 3% 0; }
+
+.overlay-block {
+	padding: 5% 3%;
+	background: rgba(136,136,136,0.8);
+}
+
+.circle-wrapper,
+.arrow-wrapper {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.circle-wrapper {
+	margin-top: 5%;
+	padding: 0 4%;
+}
+
+.circle-base {
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+}
+
+.type-one { background: #FF7F27; }
+
+.type-two { background: #7ECB5A; }
+
+.type-three { background: #0080C0; }
+
+.circle-base img { transform: scale(0.6); }
+
+.arrow {
+	width: 10%;
+	border-top: 2px solid #FFFFFF;
+	border-bottom: 2px solid #FFFFFF;
+}
+
+.arrow-wrapper {
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	background: #FFFFFF;
+}
+
+.arrow-wrapper .glyphicon { top: 0; }
+
+.text-wrapper { margin-top: 2%; }
+
+.text-wrapper div { overflow: visible; }
+
+.type-one-text h4 {
+	margin-left: -4%;
+	white-space: nowrap;
+}
+
+/* .type-two-text h4 {	margin-left: 36%; } */
+
+.type-three-text h4 {
+	text-align: right;
+	white-space: nowrap;
+}
+
+/*
+***************** 
+*/
+
+
+
+
+
+
+
+
+
+/*
+***************** media 800
+*/
+
+@media screen and (max-width: 800px) {
+	.arrow { width: 8%; }
+	.type-one-text h4 { margin-left: -15%; }
+	.type-three-text h4 { margin-left: 8%; }
+}
