--- a/src/app/devices/devices.component.html
+++ b/src/app/devices/devices.component.html
@@ -1,10 +1,10 @@
-<h2>Devices</h2>
+<h2 class="display-4 text-center mt-3 mb-3">Devices</h2>
 
-<div class="grid grid-pad">
-  <a *ngFor="let device of devices" class="col-1-4"
+<div class="container-fluid">
+  <a *ngFor="let device of devices" class="col"
       routerLink="/devices/{{device.slug}}">
-    <div class="module hero">
-      <h4>{{device.slug}}</h4>
+    <div class="">
+      <h4 class="mt-3 mb-3">{{device.slug}}</h4>
     </div>
   </a>
 </div>
