--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,4 +1,6 @@
-<div *ngIf="messageService.messages.length">
+<br />
+<hr>
+<div *ngIf="messageService.messages.length" class="container text-left">
 
   <h2>Messages</h2>
   <button class="clear"
