--- a/src/app/devices/devices.component.html
+++ b/src/app/devices/devices.component.html
@@ -1,10 +1,15 @@
 <h2 class="display-4 text-center mt-3 mb-3">Devices</h2>
 
 <div class="container-fluid">
-  <a *ngFor="let device of devices" class="col d-block"
-      routerLink="/devices/{{device.slug}}">
-    <div class="">
-      <h4 class="mt-3 mb-3">{{device.slug}}</h4>
-    </div>
-  </a>
+  <div class="row">
+    <a *ngFor="let device of devices" class="col d-block"
+        routerLink="/devices/{{device.slug}}">
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="{{device.thumbnail}}" alt="{{device.title}}">
+        <div class="card-body">
+          <h4 class="mt-3 mb-3">{{device.title}}</h4>
+        </div>
+      </div>
+    </a>
+  </div>
 </div>
