Device-details layout update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
-<!-- <h1>{{title}}</h1> -->
 <nav class="nav fixed-top pt-3 pl-3">
-  <a class="btn nav-link active" href="#" routerLink="dashboard">Home</a>
-  <a class="btn nav-link" href="#" routerLink="devices">Devices</a>
+  <a class="btn nav-link active text-white" href="#" routerLink="dashboard">Home</a>
+  <a class="btn nav-link text-white" href="#" routerLink="devices">Devices</a>
 </nav>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
