--- a/src/app/device-details/device-details.component.css
+++ b/src/app/device-details/device-details.component.css
@@ -1,16 +1,21 @@
 /* HeroDetailComponent's private CSS styles */
-label {
-  display: inline-block;
-  width: 3em;
-  margin: .5em 0;
-  color: #607D8B;
-  font-weight: bold;
-}
-input {
-  height: 2em;
-  font-size: 1em;
-  padding-left: .4em;
-}
+/* label { */
+/*   display: inline-block; */
+/*   width: 3em; */
+/*   margin: .5em 0; */
+/*   color: #607D8B; */
+/*   font-weight: bold; */
+/* } */
+/* input { */
+/*   height: 2em; */
+/*   font-size: 1em; */
+/*   padding-left: .4em; */
+/* } */
+
+.bg-light { background-color: #F5F5F5; }
+
+.scale-one-and-half { transform: scale(1.5); }
+
 button {
   margin-top: 20px;
   font-family: Arial;
@@ -20,9 +25,9 @@ button {
   border-radius: 4px;
   cursor: pointer; cursor: hand;
 }
-button:hover {
-  background-color: #cfd8dc;
-}
+
+button:hover { background-color: #cfd8dc; }
+
 button:disabled {
   background-color: #eee;
   color: #ccc;
