--- a/src/app/device-details/device-details.component.html
+++ b/src/app/device-details/device-details.component.html
@@ -1,146 +1,250 @@
 <div *ngIf="device">
 
-  <h2 class="text-center display-4 mt-3">{{ device.title }} Details</h2>
+<h2 class="text-center display-4 mt-3">{{ device.title }} Details</h2>
 
-  <div class="container">
+<div class="container-fluid mt-5">
 
-    <table class="table table-striped table-bordered table-hover">
+<div class="row">
 
-        <thead class="thead-dark">
-          <tr>
-            <th  scope="col"><span>title: </span>{{device.title}}</th>
-          </tr>
-        </thead>
+<!-- Image -->
 
-        <tbody>
-          <tr>
-            <th scope="row"><span>id:</span></th>
-            <td>{{device._id}}</td>
-          </tr>
+	<div class="col-6 d-flex align-items-center justify-content-center bg-light">
+		<img class="scale-one-and-half" src="{{ device.thumbnail }}" alt="{{ device.title }}" />
+	</div>
+	
+	<div class="col-6">
+		<h3 class="mt-3 mb-3">{{ device.title }}</h3>
+		<hr>
+		
+		<h4 class="mt-3 mb-3">Top Features:</h4>
+		<br />
+		
+		<div class="row d-flex">
+		
+<!-- Material -->
+		
+			<div class="col-6 border-right border-bottom">
+				<div class="">
+					<h5 class="text-center text-uppercase mt-3 mb-3">Material</h5>
+					<p class="text-center">{{ device.body }}</p>
+				</div>
+			</div><!-- /col-6.border-right -->
 
-          <tr>
-            <th scope="row"><span>title:</span></th>
-            <td>{{device.slug}}</td>
-          </tr>
-          <tr>
-            <th scope="row"><span>os:</span></th>
-            <td>{{device.os}}</td>
-          </tr>
-          <tr>
-            <th scope="row"><span>display:</span></th>
-            <td>{{device.display}}</td>
-          </tr>
+<!-- Storage -->
+			
+			<div class="col-6 border-bottom">
+				<div class="">
+					<h5 class="text-center text-uppercase mt-3 mb-3">Storage</h5>
+					<p class="text-center">{{ device.storage }}</p>
+				</div>
+			</div><!-- /col-6 -->
+		
+		</div><!-- /row -->
+		
+		<div class="row d-flex">
+		
+<!-- Rear Camera -->
+		
+			<div class="col-6 border-right border-bottom">
+				<div class="">
+					<h5 class="text-center text-uppercase mt-3 mb-3">Rear Camera</h5>
+					<p class="text-center">{{ device.back_camera }}</p>
+				</div>
+			</div><!-- /col-6.border-right -->
+			
+<!-- Front Camera -->
+			
+			<div class="col-6 border-bottom">
+				<div class="">
+					<h5 class="text-center text-uppercase mt-3 mb-3">Front Camera</h5>
+					<p class="text-center">{{ device.front_camera }}</p>
+				</div>
+			</div><!-- /col-6 -->
+		
+		</div><!-- /row -->
+		
+		<div class="row d-flex">
+		
+<!-- Display -->
+		
+			<div class="col-6 border-right border-bottom">
+				<div class="">
+					<h5 class="text-center text-uppercase mt-3 mb-3">Display</h5>
+					<p class="text-center">{{ device.display }}</p>
+				</div>
+			</div><!-- /col-6.border-right -->
 
-          <tr>
-            <th scope="row"><span>front_camera:</span></th>
-            <td>{{device.front_camera}}</td>
-          </tr>
-          <tr>
-            <th scope="row"><span>back_camera:</span></th>
-            <td>{{device.back_camera}}</td>
-          </tr>
-          <tr>
-            <th scope="row"><span>cpu:</span></th>
-            <td>{{device.cpu}}</td>
-          </tr>
-          <tr>
-            <th scope="row"><span>gpu:</span></th>
-            <td>{{device.gpu}}</td>
-          </tr>
-          <tr>
-            <th scope="row"><span>storage:</span></th>
-            <td>{{device.storage}}</td>
-          </tr>
-          <tr>
-            <th scope="row"><span>ram:</span></th>
-            <td>{{device.ram}}</td>
-          </tr>
-          <tr>
-            <th scope="row"><span>length:</span></th>
-            <td>{{device.length}}</td>
-          </tr>
-          <tr>
-            <th scope="row"><span>width:</span></th>
-            <td>{{device.width}}</td>
-          </tr>
-          <tr>
-            <th scope="row"><span>height:</span></th>
-            <td>{{device.depth}}</td>
-          </tr>
-          <tr>
-            <th scope="row"><span>weight:</span></th>
-            <td>{{device.weight}}</td>
-          </tr>
-          <tr>
-            <th scope="row"><span>colors:</span></th>
-            <td>{{device.colors}}</td>
-          </tr>
-          <tr>
-            <th scope="row"><span>battery:</span></th>
-            <td>{{device.battery}}</td>
-          </tr>
+<!-- Battery -->
+			
+			<div class="col-6 border-bottom">
+				<div class="">
+					<h5 class="text-center text-uppercase mt-3 mb-3">Battery</h5>
+					<p class="text-center">{{ device.battery }}</p>
+				</div>
+			</div><!-- /col-6 -->
+		
+		</div><!-- /row -->
+		
+<!-- all specs -->
+		
+<!-- 		<div class="row d-flex"> -->
+		<div id="accordionFeatures">
+			<div class="card">
+				<div id="headingFeatures" class="card-header" >
+  					<h5 class="mb-0">
+						<button class="btn btn-link" data-toggle="collapse" data-target="#collapseFeatures" aria-expanded="false" aria-controls="collapseFeatures">See All Features</button>
+					</h5>
+				</div><!-- /card-header -->
 
-          <tr>
-            <th scope="row"><span>wifi:</span></th>
-            <td>{{device.wifi}}</td>
-          </tr>
+ 				<div id="collapseFeatures" class="collapse" aria-labelledby="headingFeatures" data-parent="#accordionFeatures">
+ 					<div class="card-body">
+						<div class=""><{{ device.os }}</div>
+					</div>
+				</div><!-- /collapseFeatures -->
+				
+			</div><!-- /card -->
+		</div>
+<!-- 		</div><!-- /row -->
+		
+	</div><!-- /col-6 -->
+</div><!-- /row -->
 
-          <tr>
-            <th scope="row"><span>bluetooth:</span></th>
-            <td>{{device.bt}}</td>
-          </tr>
+</div><!-- /container -->
 
-          <tr>
-            <th scope="row"><span>nfc:</span></th>
-            <td>{{device.nfc}}</td>
-          </tr>
-
-          <tr>
-            <th scope="row"><span>location:</span></th>
-            <td>{{device.location}}</td>
-          </tr>
-
-          <tr>
-            <th scope="row"><span>network:</span></th>
-            <td>{{device.network}}</td>
-          </tr>
-
-          <tr>
-            <th scope="row"><span>sensors:</span></th>
-            <td>{{device.sensors}}</td>
-          </tr>
-
-          <tr>
-            <th scope="row"><span>usb:</span></th>
-            <td>{{device.usb}}</td>
-          </tr>
-
-          <tr>
-            <th scope="row"><span>sim:</span></th>
-            <td>{{device.sim}}</td>
-          </tr>
-
-          <tr>
-            <th scope="row"><span>body:</span></th>
-            <td>{{device.body}}</td>
-          </tr>
-
-          <tr>
-            <th scope="row"><span>screen:</span></th>
-            <td>{{device.screen}}</td>
-          </tr>
-
-          <tr>
-            <th scope="row"><span>price</span></th>
-            <td>{{device.price}}</td>
-          </tr>
-
-        </tbody>
-      </table>
-
-</div>
-
-
-</div>
+</div><!-- /device -->
 
 <div class="container mt-3 text-center"><button (click)="goBack()">go back</button></div>
+
+<!--     <table class="table table-striped table-bordered table-hover"> -->
+
+<!--         <thead class="thead-dark"> -->
+<!--           <tr> -->
+<!--             <th  scope="col"><span>title: </span>{{device.title}}</th> -->
+<!--           </tr> -->
+<!--         </thead> -->
+
+<!--         <tbody> -->
+<!--           <tr> -->
+<!--             <th scope="row"><span>id:</span></th> -->
+<!--             <td>{{device._id}}</td> -->
+<!--           </tr> -->
+
+<!--           <tr> -->
+<!--             <th scope="row"><span>title:</span></th> -->
+<!--             <td>{{device.slug}}</td> -->
+<!--           </tr> -->
+<!--           <tr> -->
+<!--             <th scope="row"><span>os:</span></th> -->
+<!--             <td>{{device.os}}</td> -->
+<!--           </tr> -->
+<!--           <tr> -->
+<!--             <th scope="row"><span>display:</span></th> -->
+<!--             <td>{{device.display}}</td> -->
+<!--           </tr> -->
+
+<!--           <tr> -->
+<!--             <th scope="row"><span>front_camera:</span></th> -->
+<!--             <td>{{device.front_camera}}</td> -->
+<!--           </tr> -->
+<!--           <tr> -->
+<!--             <th scope="row"><span>back_camera:</span></th> -->
+<!--             <td>{{device.back_camera}}</td> -->
+<!--           </tr> -->
+<!--           <tr> -->
+<!--             <th scope="row"><span>cpu:</span></th> -->
+<!--             <td>{{device.cpu}}</td> -->
+<!--           </tr> -->
+<!--           <tr> -->
+<!--             <th scope="row"><span>gpu:</span></th> -->
+<!--             <td>{{device.gpu}}</td> -->
+<!--           </tr> -->
+<!--           <tr> -->
+<!--             <th scope="row"><span>storage:</span></th> -->
+<!--             <td>{{device.storage}}</td> -->
+<!--           </tr> -->
+<!--           <tr> -->
+<!--             <th scope="row"><span>ram:</span></th> -->
+<!--             <td>{{device.ram}}</td> -->
+<!--           </tr> -->
+<!--           <tr> -->
+<!--             <th scope="row"><span>length:</span></th> -->
+<!--             <td>{{device.length}}</td> -->
+<!--           </tr> -->
+<!--           <tr> -->
+<!--             <th scope="row"><span>width:</span></th> -->
+<!--             <td>{{device.width}}</td> -->
+<!--           </tr> -->
+<!--           <tr> -->
+<!--             <th scope="row"><span>height:</span></th> -->
+<!--             <td>{{device.depth}}</td> -->
+<!--           </tr> -->
+<!--           <tr> -->
+<!--             <th scope="row"><span>weight:</span></th> -->
+<!--             <td>{{device.weight}}</td> -->
+<!--           </tr> -->
+<!--           <tr> -->
+<!--             <th scope="row"><span>colors:</span></th> -->
+<!--             <td>{{device.colors}}</td> -->
+<!--           </tr> -->
+<!--           <tr> -->
+<!--             <th scope="row"><span>battery:</span></th> -->
+<!--             <td>{{device.battery}}</td> -->
+<!--           </tr> -->
+
+<!--           <tr> -->
+<!--             <th scope="row"><span>wifi:</span></th> -->
+<!--             <td>{{device.wifi}}</td> -->
+<!--           </tr> -->
+
+<!--           <tr> -->
+<!--             <th scope="row"><span>bluetooth:</span></th> -->
+<!--             <td>{{device.bt}}</td> -->
+<!--           </tr> -->
+
+<!--           <tr> -->
+<!--             <th scope="row"><span>nfc:</span></th> -->
+<!--             <td>{{device.nfc}}</td> -->
+<!--           </tr> -->
+
+<!--           <tr> -->
+<!--             <th scope="row"><span>location:</span></th> -->
+<!--             <td>{{device.location}}</td> -->
+<!--           </tr> -->
+
+<!--           <tr> -->
+<!--             <th scope="row"><span>network:</span></th> -->
+<!--             <td>{{device.network}}</td> -->
+<!--           </tr> -->
+
+<!--           <tr> -->
+<!--             <th scope="row"><span>sensors:</span></th> -->
+<!--             <td>{{device.sensors}}</td> -->
+<!--           </tr> -->
+
+<!--           <tr> -->
+<!--             <th scope="row"><span>usb:</span></th> -->
+<!--             <td>{{device.usb}}</td> -->
+<!--           </tr> -->
+
+<!--           <tr> -->
+<!--             <th scope="row"><span>sim:</span></th> -->
+<!--             <td>{{device.sim}}</td> -->
+<!--           </tr> -->
+
+<!--           <tr> -->
+<!--             <th scope="row"><span>body:</span></th> -->
+<!--             <td>{{device.body}}</td> -->
+<!--           </tr> -->
+
+<!--           <tr> -->
+<!--             <th scope="row"><span>screen:</span></th> -->
+<!--             <td>{{device.screen}}</td> -->
+<!--           </tr> -->
+
+<!--           <tr> -->
+<!--             <th scope="row"><span>price</span></th> -->
+<!--             <td>{{device.price}}</td> -->
+<!--           </tr> -->
+
+<!--         </tbody> -->
+<!--       </table> -->
