--- a/src/app/device-details/device-details.component.css
+++ b/src/app/device-details/device-details.component.css
@@ -1,20 +1,8 @@
-/* HeroDetailComponent's private CSS styles */
-/* label { */
-/*   display: inline-block; */
-/*   width: 3em; */
-/*   margin: .5em 0; */
-/*   color: #607D8B; */
-/*   font-weight: bold; */
-/* } */
-/* input { */
-/*   height: 2em; */
-/*   font-size: 1em; */
-/*   padding-left: .4em; */
-/* } */
-
-.bg-light { background-color: #F5F5F5; }
+.bg-light { background-color: rgba(0,0,0,.03); }
 
 .scale-one-and-half { transform: scale(1.5); }
+
+.top-10 { top: 10rem; }
 
 button {
   margin-top: 20px;
