--- a/src/app/device-details/device-details.component.html
+++ b/src/app/device-details/device-details.component.html
@@ -9,7 +9,9 @@
 <!-- Image -->
 
 	<div class="col-6 d-flex align-items-center justify-content-center bg-light">
-		<img class="scale-one-and-half" src="{{ device.thumbnail }}" alt="{{ device.title }}" />
+		<div class="image-wrap position-absolute top-10">
+			<img class="scale-one-and-half position-sticky top-10" src="{{ device.thumbnail }}" alt="{{ device.title }}" />
+		</div>
 	</div>
 	
 	<div class="col-6">
@@ -18,6 +20,8 @@
 		
 		<h4 class="mt-3 mb-3">Top Features:</h4>
 		<br />
+		
+<!-- Specs row 1 -->
 		
 		<div class="row d-flex">
 		
@@ -41,6 +45,8 @@
 		
 		</div><!-- /row -->
 		
+<!-- Specs row 2 -->
+		
 		<div class="row d-flex">
 		
 <!-- Rear Camera -->
@@ -63,6 +69,8 @@
 		
 		</div><!-- /row -->
 		
+<!-- Specs row 3 -->
+		
 		<div class="row d-flex">
 		
 <!-- Display -->
@@ -84,29 +92,50 @@
 			</div><!-- /col-6 -->
 		
 		</div><!-- /row -->
-		
-<!-- all specs -->
-		
-<!-- 		<div class="row d-flex"> -->
-		<div id="accordionFeatures">
-			<div class="card">
-				<div id="headingFeatures" class="card-header" >
-  					<h5 class="mb-0">
-						<button class="btn btn-link" data-toggle="collapse" data-target="#collapseFeatures" aria-expanded="false" aria-controls="collapseFeatures">See All Features</button>
-					</h5>
-				</div><!-- /card-header -->
 
- 				<div id="collapseFeatures" class="collapse" aria-labelledby="headingFeatures" data-parent="#accordionFeatures">
- 					<div class="card-body">
-						<div class=""><{{ device.os }}</div>
-					</div>
-				</div><!-- /collapseFeatures -->
-				
-			</div><!-- /card -->
-		</div>
-<!-- 		</div><!-- /row -->
+<!-- Specs row 4 -->
+		
+		<div class="row d-flex">
+
+<!-- all specs -->
+			<div class="col-12 p-0">
+				<ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0">
+	  				<ngb-panel title="See all features">
+					<ng-template ngbPanelContent>
+						<p><span class="col-3 d-inline-block">Operating System:</span><span class="col-9 d-inline-block">{{ device.os }}</span></p>
+						<p><span class="col-3 d-inline-block">Display:</span><span class="col-9 d-inline-block">{{ device.display }}</span></p>
+						<p><span class="col-3 d-inline-block">Front Camera:</span><span class="col-9 d-inline-block">{{ device.front_camera }}</span></p>
+						<p><span class="col-3 d-inline-block">Back Camera:</span><span class="col-9 d-inline-block">{{ device.back_camera }}</span></p>
+						<p><span class="col-3 d-inline-block">CPU:</span><span class="col-9 d-inline-block">{{ device.cpu }}</span></p>
+						<p><span class="col-3 d-inline-block">GPU:</span><span class="col-9 d-inline-block">{{ device.gpu }}</span></p>
+						<p><span class="col-3 d-inline-block">Storage:</span><span class="col-9 d-inline-block">{{ device.storage }}</span></p>
+						<p><span class="col-3 d-inline-block">RAM:</span><span class="col-9 d-inline-block">{{ device.ram }}</span></p>
+						<p><span class="col-3 d-inline-block">Length:</span><span class="col-9 d-inline-block">{{ device.length }}</span></p>
+						<p><span class="col-3 d-inline-block">Width:</span><span class="col-9 d-inline-block">{{ device.width }}</span></p>
+						<p><span class="col-3 d-inline-block">Height:</span><span class="col-9 d-inline-block">{{ device.depth }}</span></p>
+						<p><span class="col-3 d-inline-block">Weight:</span><span class="col-9 d-inline-block">{{ device.weight }}</span></p>
+						<p><span class="col-3 d-inline-block">Colors:</span><span class="col-9 d-inline-block">{{ device.colors }}</span></p>
+						<p><span class="col-3 d-inline-block">Battery:</span><span class="col-9 d-inline-block">{{ device.battery }}</span></p>
+						<p><span class="col-3 d-inline-block">WiFi:</span><span class="col-9 d-inline-block">{{ device.wifi }}</span></p>
+						<p><span class="col-3 d-inline-block">Bluetooth:</span><span class="col-9 d-inline-block">{{ device.bt }}</span></p>
+						<p><span class="col-3 d-inline-block">NFC:</span><span class="col-9 d-inline-block">{{ device.nfc }}</span></p>
+						<p><span class="col-3 d-inline-block">Location:</span><span class="col-9 d-inline-block">{{ device.location }}</span></p>
+						<p><span class="col-3 d-inline-block">Network:</span><span class="col-9 d-inline-block">{{ device.network }}</span></p>
+						<p><span class="col-3 d-inline-block">Sensors:</span><span class="col-9 d-inline-block">{{ device.sensors }}</span></p>
+						<p><span class="col-3 d-inline-block">USB:</span><span class="col-9 d-inline-block">{{ device.usb }}</span></p>
+						<p><span class="col-3 d-inline-block">SIM:</span><span class="col-9 d-inline-block">{{ device.sim }}</span></p>
+						<p><span class="col-3 d-inline-block">Body:</span><span class="col-9 d-inline-block">{{ device.body }}</span></p>
+						<p><span class="col-3 d-inline-block">Screen:</span><span class="col-9 d-inline-block">{{ device.screen }}</span></p>
+						<p><span class="col-3 d-inline-block">Price:</span><span class="col-9 d-inline-block">{{ device.price }}</span></p>
+					</ng-template>
+					</ngb-panel>
+				</ngb-accordion>
+			</div><!-- /col-12 -->
+		
+		</div><!-- /row -->
 		
 	</div><!-- /col-6 -->
+	
 </div><!-- /row -->
 
 </div><!-- /container -->
@@ -114,137 +143,3 @@
 </div><!-- /device -->
 
 <div class="container mt-3 text-center"><button (click)="goBack()">go back</button></div>
-
-<!--     <table class="table table-striped table-bordered table-hover"> -->
-
-<!--         <thead class="thead-dark"> -->
-<!--           <tr> -->
-<!--             <th  scope="col"><span>title: </span>{{device.title}}</th> -->
-<!--           </tr> -->
-<!--         </thead> -->
-
-<!--         <tbody> -->
-<!--           <tr> -->
-<!--             <th scope="row"><span>id:</span></th> -->
-<!--             <td>{{device._id}}</td> -->
-<!--           </tr> -->
-
-<!--           <tr> -->
-<!--             <th scope="row"><span>title:</span></th> -->
-<!--             <td>{{device.slug}}</td> -->
-<!--           </tr> -->
-<!--           <tr> -->
-<!--             <th scope="row"><span>os:</span></th> -->
-<!--             <td>{{device.os}}</td> -->
-<!--           </tr> -->
-<!--           <tr> -->
-<!--             <th scope="row"><span>display:</span></th> -->
-<!--             <td>{{device.display}}</td> -->
-<!--           </tr> -->
-
-<!--           <tr> -->
-<!--             <th scope="row"><span>front_camera:</span></th> -->
-<!--             <td>{{device.front_camera}}</td> -->
-<!--           </tr> -->
-<!--           <tr> -->
-<!--             <th scope="row"><span>back_camera:</span></th> -->
-<!--             <td>{{device.back_camera}}</td> -->
-<!--           </tr> -->
-<!--           <tr> -->
-<!--             <th scope="row"><span>cpu:</span></th> -->
-<!--             <td>{{device.cpu}}</td> -->
-<!--           </tr> -->
-<!--           <tr> -->
-<!--             <th scope="row"><span>gpu:</span></th> -->
-<!--             <td>{{device.gpu}}</td> -->
-<!--           </tr> -->
-<!--           <tr> -->
-<!--             <th scope="row"><span>storage:</span></th> -->
-<!--             <td>{{device.storage}}</td> -->
-<!--           </tr> -->
-<!--           <tr> -->
-<!--             <th scope="row"><span>ram:</span></th> -->
-<!--             <td>{{device.ram}}</td> -->
-<!--           </tr> -->
-<!--           <tr> -->
-<!--             <th scope="row"><span>length:</span></th> -->
-<!--             <td>{{device.length}}</td> -->
-<!--           </tr> -->
-<!--           <tr> -->
-<!--             <th scope="row"><span>width:</span></th> -->
-<!--             <td>{{device.width}}</td> -->
-<!--           </tr> -->
-<!--           <tr> -->
-<!--             <th scope="row"><span>height:</span></th> -->
-<!--             <td>{{device.depth}}</td> -->
-<!--           </tr> -->
-<!--           <tr> -->
-<!--             <th scope="row"><span>weight:</span></th> -->
-<!--             <td>{{device.weight}}</td> -->
-<!--           </tr> -->
-<!--           <tr> -->
-<!--             <th scope="row"><span>colors:</span></th> -->
-<!--             <td>{{device.colors}}</td> -->
-<!--           </tr> -->
-<!--           <tr> -->
-<!--             <th scope="row"><span>battery:</span></th> -->
-<!--             <td>{{device.battery}}</td> -->
-<!--           </tr> -->
-
-<!--           <tr> -->
-<!--             <th scope="row"><span>wifi:</span></th> -->
-<!--             <td>{{device.wifi}}</td> -->
-<!--           </tr> -->
-
-<!--           <tr> -->
-<!--             <th scope="row"><span>bluetooth:</span></th> -->
-<!--             <td>{{device.bt}}</td> -->
-<!--           </tr> -->
-
-<!--           <tr> -->
-<!--             <th scope="row"><span>nfc:</span></th> -->
-<!--             <td>{{device.nfc}}</td> -->
-<!--           </tr> -->
-
-<!--           <tr> -->
-<!--             <th scope="row"><span>location:</span></th> -->
-<!--             <td>{{device.location}}</td> -->
-<!--           </tr> -->
-
-<!--           <tr> -->
-<!--             <th scope="row"><span>network:</span></th> -->
-<!--             <td>{{device.network}}</td> -->
-<!--           </tr> -->
-
-<!--           <tr> -->
-<!--             <th scope="row"><span>sensors:</span></th> -->
-<!--             <td>{{device.sensors}}</td> -->
-<!--           </tr> -->
-
-<!--           <tr> -->
-<!--             <th scope="row"><span>usb:</span></th> -->
-<!--             <td>{{device.usb}}</td> -->
-<!--           </tr> -->
-
-<!--           <tr> -->
-<!--             <th scope="row"><span>sim:</span></th> -->
-<!--             <td>{{device.sim}}</td> -->
-<!--           </tr> -->
-
-<!--           <tr> -->
-<!--             <th scope="row"><span>body:</span></th> -->
-<!--             <td>{{device.body}}</td> -->
-<!--           </tr> -->
-
-<!--           <tr> -->
-<!--             <th scope="row"><span>screen:</span></th> -->
-<!--             <td>{{device.screen}}</td> -->
-<!--           </tr> -->
-
-<!--           <tr> -->
-<!--             <th scope="row"><span>price</span></th> -->
-<!--             <td>{{device.price}}</td> -->
-<!--           </tr> -->
-
-<!--         </tbody> -->
-<!--       </table> -->
