--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<nav class="nav fixed-top pt-3 pl-3">
-  <a class="btn nav-link active text-white" href="#" routerLink="dashboard">Home</a>
-  <a class="btn nav-link text-white" href="#" routerLink="devices">Devices</a>
-</nav>
+<app-header></app-header>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
