added more styling

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
 
 <div class="container-fluid">
   <div class="row">
-    <a *ngFor="let device of devices" class="col d-block mb-4"
+    <a *ngFor="let device of devices" class="col d-flex justify-content-center align-items-center mb-4"
         routerLink="/devices/{{device.slug}}">
       <div class="card" style="width: 18rem;">
         <img class="card-img-top scale-75" src="{{device.thumbnail}}" alt="{{device.title}}">
