--- a/src/app/device-details/device-details.component.css
+++ b/src/app/device-details/device-details.component.css
@@ -1,5 +1,11 @@
 .bg-light { background-color: rgba(0,0,0,.03); }
 
-.scale-one-and-half { transform: scale(1.5); }
+/*
+***************** media 799
+*/
 
-.top-10 { top: 10rem; }
+@media screen and (min-width: 992px) {
+	.img-wrap { position: absolute; }
+	.scale-one-and-half-lg { transform: scale(1.5); }
+	.top-10-lg { top: 10rem; }
+}
