--- a/src/app/device-details/device-details.component.html
+++ b/src/app/device-details/device-details.component.html
@@ -8,13 +8,13 @@
 
 <!-- Image -->
 
-	<div class="col-6 d-flex align-items-center justify-content-center bg-light">
-		<div class="image-wrap position-absolute top-10">
-			<img class="scale-one-and-half position-sticky top-10" src="{{ device.thumbnail }}" alt="{{ device.title }}" />
+	<div class="col-md-12 col-lg-6 d-flex align-items-center justify-content-center bg-light">
+		<div class="image-wrap position-sticky top-10-lg">
+			<img class="scale-one-and-half-lg" src="{{ device.thumbnail }}" alt="{{ device.title }}" />
 		</div>
 	</div>
 	
-	<div class="col-6">
+	<div class="col-md-12 col-lg-6">
 		
 		<h4 class="mt-3 mb-3">Top Features:</h4>
 		<br />
@@ -100,31 +100,31 @@
 				<ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0">
 	  				<ngb-panel title="See all features">
 					<ng-template ngbPanelContent>
-						<p><span class="col-3 d-inline-block">Operating System:</span><span class="col-9 d-inline-block">{{ device.os }}</span></p>
-						<p><span class="col-3 d-inline-block">Display:</span><span class="col-9 d-inline-block">{{ device.display }}</span></p>
-						<p><span class="col-3 d-inline-block">Front Camera:</span><span class="col-9 d-inline-block">{{ device.front_camera }}</span></p>
-						<p><span class="col-3 d-inline-block">Back Camera:</span><span class="col-9 d-inline-block">{{ device.back_camera }}</span></p>
-						<p><span class="col-3 d-inline-block">CPU:</span><span class="col-9 d-inline-block">{{ device.cpu }}</span></p>
-						<p><span class="col-3 d-inline-block">GPU:</span><span class="col-9 d-inline-block">{{ device.gpu }}</span></p>
-						<p><span class="col-3 d-inline-block">Storage:</span><span class="col-9 d-inline-block">{{ device.storage }}</span></p>
-						<p><span class="col-3 d-inline-block">RAM:</span><span class="col-9 d-inline-block">{{ device.ram }}</span></p>
-						<p><span class="col-3 d-inline-block">Length:</span><span class="col-9 d-inline-block">{{ device.length }}</span></p>
-						<p><span class="col-3 d-inline-block">Width:</span><span class="col-9 d-inline-block">{{ device.width }}</span></p>
-						<p><span class="col-3 d-inline-block">Height:</span><span class="col-9 d-inline-block">{{ device.depth }}</span></p>
-						<p><span class="col-3 d-inline-block">Weight:</span><span class="col-9 d-inline-block">{{ device.weight }}</span></p>
-						<p><span class="col-3 d-inline-block">Colors:</span><span class="col-9 d-inline-block">{{ device.colors }}</span></p>
-						<p><span class="col-3 d-inline-block">Battery:</span><span class="col-9 d-inline-block">{{ device.battery }}</span></p>
-						<p><span class="col-3 d-inline-block">WiFi:</span><span class="col-9 d-inline-block">{{ device.wifi }}</span></p>
-						<p><span class="col-3 d-inline-block">Bluetooth:</span><span class="col-9 d-inline-block">{{ device.bt }}</span></p>
-						<p><span class="col-3 d-inline-block">NFC:</span><span class="col-9 d-inline-block">{{ device.nfc }}</span></p>
-						<p><span class="col-3 d-inline-block">Location:</span><span class="col-9 d-inline-block">{{ device.location }}</span></p>
-						<p><span class="col-3 d-inline-block">Network:</span><span class="col-9 d-inline-block">{{ device.network }}</span></p>
-						<p><span class="col-3 d-inline-block">Sensors:</span><span class="col-9 d-inline-block">{{ device.sensors }}</span></p>
-						<p><span class="col-3 d-inline-block">USB:</span><span class="col-9 d-inline-block">{{ device.usb }}</span></p>
-						<p><span class="col-3 d-inline-block">SIM:</span><span class="col-9 d-inline-block">{{ device.sim }}</span></p>
-						<p><span class="col-3 d-inline-block">Body:</span><span class="col-9 d-inline-block">{{ device.body }}</span></p>
-						<p><span class="col-3 d-inline-block">Screen:</span><span class="col-9 d-inline-block">{{ device.screen }}</span></p>
-						<p><span class="col-3 d-inline-block">Price:</span><span class="col-9 d-inline-block">{{ device.price }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">Operating System:</span><span class="col-9 d-inline-block">{{ device.os }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">Display:</span><span class="col-9 d-inline-block">{{ device.display }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">Front Camera:</span><span class="col-9 d-inline-block">{{ device.front_camera }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">Back Camera:</span><span class="col-9 d-inline-block">{{ device.back_camera }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">CPU:</span><span class="col-9 d-inline-block">{{ device.cpu }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">GPU:</span><span class="col-9 d-inline-block">{{ device.gpu }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">Storage:</span><span class="col-9 d-inline-block">{{ device.storage }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">RAM:</span><span class="col-9 d-inline-block">{{ device.ram }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">Length:</span><span class="col-9 d-inline-block">{{ device.length }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">Width:</span><span class="col-9 d-inline-block">{{ device.width }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">Height:</span><span class="col-9 d-inline-block">{{ device.depth }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">Weight:</span><span class="col-9 d-inline-block">{{ device.weight }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">Colors:</span><span class="col-9 d-inline-block">{{ device.colors }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">Battery:</span><span class="col-9 d-inline-block">{{ device.battery }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">WiFi:</span><span class="col-9 d-inline-block">{{ device.wifi }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">Bluetooth:</span><span class="col-9 d-inline-block">{{ device.bt }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">NFC:</span><span class="col-9 d-inline-block">{{ device.nfc }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">Location:</span><span class="col-9 d-inline-block">{{ device.location }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">Network:</span><span class="col-9 d-inline-block">{{ device.network }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">Sensors:</span><span class="col-9 d-inline-block">{{ device.sensors }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">USB:</span><span class="col-9 d-inline-block">{{ device.usb }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">SIM:</span><span class="col-9 d-inline-block">{{ device.sim }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">Body:</span><span class="col-9 d-inline-block">{{ device.body }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">Screen:</span><span class="col-9 d-inline-block">{{ device.screen }}</span></p>
+						<p class="pb-2 border-bottom"><span class="col-3 d-inline-block">Price:</span><span class="col-9 d-inline-block">{{ device.price }}</span></p>
 					</ng-template>
 					</ngb-panel>
 				</ngb-accordion>
