--- a/src/app/device-details/device-details.component.html
+++ b/src/app/device-details/device-details.component.html
@@ -10,7 +10,7 @@
 
 	<div class="col-md-12 col-lg-6 d-flex align-items-center justify-content-center bg-light">
 		<div class="image-wrap position-sticky top-10-lg">
-			<img class="scale-one-and-half-lg" src="{{ device.thumbnail }}" alt="{{ device.title }}" />
+			<img class="scale-one-and-half-lg py-3 py-lg-0" src="{{ device.thumbnail }}" alt="{{ device.title }}" />
 		</div>
 	</div>
 	
