--- a/src/app/device-details/device-details.component.html
+++ b/src/app/device-details/device-details.component.html
@@ -16,7 +16,7 @@
 	
 	<div class="col-md-12 col-lg-6">
 		
-		<h4 class="mt-3 mb-3">Top Features:</h4>
+		<h4 class="mt-3 mb-3 text-center text-lg-left">Top Features:</h4>
 		<br />
 		
 <!-- Specs row 1 -->
