--- a/src/app/devices/devices.component.html
+++ b/src/app/devices/devices.component.html
@@ -5,7 +5,7 @@
 <div class="container-fluid">
   <div class="row">
     <a *ngFor="let device of devices" class="col mb-4 d-flex align-items-center justify-content-center"
-        routerLink="/devices/{{ device.slug }}">
+        routerLink="/devices/device/{{ device.slug }}">
       <div class="card" style="width: 18rem;">
         <img class="card-img-top scale-75" src="{{ device.thumbnail }}" alt="{{ device.title }}">
         <div class="card-body">
