Added filter page and started adding filter functionality

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -12,7 +12,7 @@
 		</div>
 		
 		<div class="col-12 my-3">
-			<a href="#">Advanced search</a>
+			<a routerLink="filter">Advanced Search</a>
 		</div>
 	</form>
 </div>
